Just some spacing issue

--- a/mobile-style.css
+++ b/mobile-style.css
@@ -5,10 +5,10 @@
   }
   
   header {
-    height: 100vh;
     flex-direction: column-reverse;
     justify-content: space-between;
-    padding: 1rem 0;
+    row-gap: 5rem;
+    padding-top: 1rem;
     background: linear-gradient(180deg, var(--uri-gray), var(--uri-white));
   }
   
